--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,10 @@ body, html {
         #capitulo .header-interior-capitulo-1 h1{
             max-width: 490px;
         }
+        #capitulo .header-interior-capitulo-1 h3{
+            max-width: 600px;
+            text-transform: uppercase;
+        }
     .header-interior-capitulo-2{
         background-color: #C79421;
     }
