--- a/css/style.css
+++ b/css/style.css
@@ -1657,7 +1657,9 @@ ul.decadas{
 
     filter: drop-shadow(0px 6px 10px #c4c4c4);
 }
-
+.none{
+    display: none;
+}
 
 
 @media only screen and (max-width: 640px) {
@@ -1992,7 +1994,13 @@ ul.decadas{
     }
 
     .menu-button a p{
-        max-width: 95px;
+        max-width: 79px;
+    }
+    .none{
+        display: none;
+    }
+    .last{
+        width: 100%;
     }
     
 }
