--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ body, html {
         position: relative;
     }
         #capitulo .header-interior-capitulo-8 h1{
-            max-width: 420px;
+            max-width: 450px;
             position: relative;
             z-index: 2;
         }
@@ -949,6 +949,11 @@ span.separador-amigo{
     }
 p.texto-nobel{
     font: 1rem/1.4 'founders_groteskregular';
+    margin: 10px auto 20px;
+    max-width: 400px;
+}
+h5.sub-nobel{
+    font: 1rem / 1.4 'Founders Grotesk';
     margin: 10px auto 20px;
     max-width: 400px;
 }
