--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,14 @@
     font-display: swap;
 }
 @font-face {
+    font-family: 'Founders Grotesk light';
+    src: url('../fonts/FoundersGrotesk-Light.woff2') format('woff2'),
+        url('../fonts/FoundersGrotesk-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
     font-family: 'Founders Grotesk X-Condensed';
     src: url('../fonts/FoundersGroteskXCond-Bold.woff2') format('woff2'),
          url('../fonts/FoundersGroteskXCond-Bold.woff') format('woff');
@@ -947,6 +955,10 @@ ul.notas-nobel{
             color: #fff !important;
         }
         
+
+p.leyenda-foto-politica{
+    font-family: 'Founders Grotesk light';
+}
 
 .box-bajada-nobel{
     margin: 20px auto;
