--- a/css/style.css
+++ b/css/style.css
@@ -1713,6 +1713,12 @@ ul.decadas{
     display: none;
 }
 
+#map {
+    height: 600px;
+    margin: 20px auto;
+    max-width: 1200px;
+    width: 100%;
+}
 
 @media only screen and (max-width: 640px) {
 
