--- a/css/style.css
+++ b/css/style.css
@@ -86,24 +86,27 @@ body, html {
         position: relative;              
         width: 100%;  
     }
-        .box-pantalla-inicio h1{
-            color: #fff;
-            font: 90px / 1.2 'Founders Grotesk X-Condensed';
+        .ctn-box-pantalla-inicio{
             left: 50%;
-            text-align: center;
-            text-transform: uppercase;
             transform: translate(-50%, -50%);                
             position: absolute;
             top: 50%;
         }
-            .box-pantalla-inicio h1 span{
-                display: block;
-                font-family: "Cormorant Garamond", serif;
-                font-size: 35px;
-                font-style: italic;
-                font-weight: 500;
-                text-transform: none;
+            .box-pantalla-inicio h1{
+                color: #fff;
+                font: 90px / 1.2 'Founders Grotesk X-Condensed';     
+                margin: 0 auto;          
+                text-align: center;
+                text-transform: uppercase;  
             }
+                .box-pantalla-inicio h1 span{
+                    display: block;
+                    font-family: "Cormorant Garamond", serif;
+                    font-size: 35px;
+                    font-style: italic;
+                    font-weight: 500;
+                    text-transform: none;
+                }
         .box-pantalla-inicio img{
             bottom: 20px;
             cursor: pointer;
@@ -2267,6 +2270,12 @@ ul.decadas{
     .box-main-galeria{
         max-width: 95%;
     }
+    .ctn-box-pantalla-inicio{
+        width: 100%;
+    }
+    .box-texto-intro {
+        padding: 0 20px;
+    }
     
 }
   
@@ -2628,3 +2637,36 @@ ul.decadas{
 .height{
     height: auto !important;
 }
+
+ul.idiomas{
+    list-style: none;
+    padding: 0 0 10px;
+    text-align: center;
+}
+    ul.idiomas li{
+        display: inline-block;
+        text-align: center;
+        vertical-align: top;
+    }
+        ul.idiomas li p{
+            border-bottom: 1px solid #c2c2c2;
+            color: #a3a3a3;
+            cursor: pointer;
+            font: 17px/1.3 'prelomedium';
+            margin: 0 5px 5px;
+            padding: 0 10px;
+            text-transform: uppercase;
+        }
+        ul.idiomas li:nth-child(1) p{
+            border-bottom: none;
+            color: #fff;
+            display: block;
+            margin-bottom: 10px;
+        }
+        .idioma-active{
+
+        }
+            .idioma-active p{
+                border-bottom-color: #C79421 !important;
+                color:  #C79421 !important;
+            }
